--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "watch": "jest --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.4",
     "use-resize-observer": "^7.0.0"
   },
   "devDependencies": {
