--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
+    "immer": "^9.0.5",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
