--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,10 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14"
-
-      - name: Install and Build 🔧
+      - uses: ./.github/actions/setup-repo
+      - name: Build 🔧
         run: |
-          npm ci
-          npm run build
+          yarn build
           touch out/.nojekyll
 
       - name: Deploy 🚀
