--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
+    "fix": "next lint --fix; prettier --write .",
+    "check-formatting": "prettier --check .",
+    "check-types": "tsc --noEmit",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest",
