--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "watch": "jest --watch"
   },
   "dependencies": {
+    "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.6.0",
-    "next": "11.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "graphql": "^16.3.0",
+    "next": "^12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "use-resize-observer": "^7.0.0"
