--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@types/jest": "^26.0.24",
     "@types/react": "^18.0.6",
     "babel-loader": "^8.2.2",
-    "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.13.0",
+    "eslint-config-next": "^12.1.5",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^27.0.6",
-    "prettier": "2.2.1",
+    "prettier": "2.6.2",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "typescript": "^4.6.3"
   }
 }
