--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.6.0",
+    "bootstrap": "^5.1.3",
+    "bootswatch": "^5.1.3",
     "graphql": "^16.3.0",
     "next": "^12.1.5",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
@@ -40,6 +43,7 @@
     "eslint-config-prettier": "^8.5.0",
     "jest": "^27.0.6",
     "prettier": "2.6.2",
+    "sass": "^1.50.1",
     "ts-jest": "^27.0.3",
     "typescript": "^4.6.3"
   }
