--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.6.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "next": "^12.1.5",
     "react": "^18.0.0",
