--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "fix": "next lint --fix; prettier --write .",
     "check-formatting": "prettier --check .",
     "check-types": "tsc --noEmit",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook",
     "test": "jest",
     "watch": "jest --watch"
@@ -32,30 +32,20 @@
     "use-resize-observer": "^8.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.6",
     "@storybook/addon-actions": "^6.5.0-beta.0",
     "@storybook/addon-essentials": "^6.5.0-beta.0",
-    "@storybook/addon-links": "^6.5.0-beta.0",
-    "@storybook/builder-webpack5": "^6.5.0-beta.0",
-    "@storybook/manager-webpack5": "^6.5.0-beta.0",
-    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.5.0-beta.0",
     "@types/jest": "^26.0.24",
     "@types/react": "^18.0.6",
     "@types/styled-components": "^5.1.25",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.7.1",
     "eslint": "^8.13.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^27.0.6",
     "prettier": "2.6.2",
     "sass": "^1.50.1",
-    "sass-loader": "^12.6.0",
     "storybook-addon-next": "^1.6.2",
-    "style-loader": "^3.3.1",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.6.3",
-    "webpack": "5"
+    "typescript": "^4.6.3"
   }
 }
