--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "@storybook/addon-actions": "^6.5.0-beta.0",
     "@storybook/addon-essentials": "^6.5.0-beta.0",
+    "@storybook/builder-webpack5": "^6.5.0-beta.0",
+    "@storybook/manager-webpack5": "^6.5.0-beta.0",
     "@storybook/react": "^6.5.0-beta.0",
     "@types/jest": "^26.0.24",
     "@types/react": "^18.0.6",
