--- a/package.json
+++ b/package.json
@@ -13,37 +13,52 @@
     "storybook": "start-storybook -p 6006 --no-open",
     "build-storybook": "build-storybook",
     "test": "jest",
-    "watch": "jest --watch"
+    "watch": "jest --watch",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@graphql-yoga/node": "^2.3.0",
     "@reduxjs/toolkit": "^1.6.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "class-validator": "^0.13.2",
     "classnames": "^2.3.1",
-    "graphql": "^16.3.0",
+    "graphql": "^15",
+    "graphql-request": "^4.2.0",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.2.0",
+    "react-query": "^3.38.0",
     "react-redux": "^7.2.4",
+    "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.5",
+    "type-graphql": "^1.1.1",
     "use-resize-observer": "^8.0.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/near-operation-file-preset": "^2.2.9",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-graphql-request": "^4.4.5",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@graphql-codegen/typescript-react-query": "^3.5.9",
     "@storybook/addon-actions": "^6.5.0-beta.0",
     "@storybook/addon-essentials": "^6.5.0-beta.0",
     "@storybook/builder-webpack5": "^6.5.0-beta.0",
     "@storybook/manager-webpack5": "^6.5.0-beta.0",
     "@storybook/react": "^6.5.0-beta.0",
-    "@types/jest": "^26.0.24",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@types/jest": "^27.4.1",
     "@types/react": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "eslint": "^8.13.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
-    "jest": "^27.0.6",
+    "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
     "prettier": "2.6.2",
     "sass": "^1.50.1",
     "storybook-addon-next": "^1.6.2",
