--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node -r dotenv/config node_modules/.bin/next dev",
+    "dev:fs": "concurrently -n next,codegen -c green,blue \"yarn dev\" \"yarn generate --watch\"",
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
@@ -14,7 +15,7 @@
     "build-storybook": "build-storybook",
     "test": "jest",
     "watch": "jest --watch",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen -r dotenv/config --config codegen.yml"
   },
   "dependencies": {
     "@graphql-yoga/node": "^2.3.0",
@@ -23,6 +24,7 @@
     "bootswatch": "^5.1.3",
     "class-validator": "^0.13.2",
     "classnames": "^2.3.1",
+    "eventsource": "^2.0.1",
     "graphql": "^15",
     "graphql-request": "^4.2.0",
     "next": "^12.1.5",
@@ -51,9 +53,12 @@
     "@storybook/react": "^6.5.0-beta.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
+    "@types/eventsource": "^1.1.8",
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.6",
     "@types/styled-components": "^5.1.25",
+    "concurrently": "^7.1.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.13.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
