--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eventsource": "^2.0.1",
     "graphql": "^15",
     "graphql-request": "^4.2.0",
+    "graphql-subscriptions": "^2.0.0",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
