--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Build 🔧
         run: |
-          yarn build
+          yarn export
           touch out/.nojekyll
 
       - name: Deploy 🚀
