--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "node -r dotenv/config node_modules/.bin/next dev",
     "dev:fs": "concurrently -n next,codegen -c green,blue \"yarn dev\" \"yarn generate --watch\"",
-    "build": "next build && next export",
-    "start": "next start",
+    "build": "next build",
+    "export": "next build && next export",
+    "start": "node -r dotenv/config node_modules/.bin/next start",
     "lint": "next lint",
     "fix": "next lint --fix; prettier --write .",
     "check-formatting": "prettier --check .",
@@ -24,6 +25,7 @@
     "bootswatch": "^5.1.3",
     "class-validator": "^0.13.2",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
     "eventsource": "^2.0.1",
     "graphql": "^15",
     "graphql-request": "^4.2.0",
@@ -59,7 +61,6 @@
     "@types/react": "^18.0.6",
     "@types/styled-components": "^5.1.25",
     "concurrently": "^7.1.0",
-    "dotenv": "^16.0.0",
     "eslint": "^8.13.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
