--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reversi",
   "version": "0.1.0",
+  "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "node -r dotenv/config node_modules/.bin/next dev",
