Increase timeout for obtaining certs.
Thank YOU https://github.com/traefik/traefik/issues/7848#issuecomment-781353041
tlschallenge still doesn't seem to work. Even the httpchallenge failed the first time.

--- a/infra/k8s/games.yml
+++ b/infra/k8s/games.yml
@@ -48,7 +48,7 @@ spec:
     - web
     - websecure
   routes:
-    - match: "Host(`games.aballslab.com`)"
+    - match: "Host(`aballslab.com`) || Host(`games.aballslab.com`)"
       kind: Rule
       services:
         - name: games-service
